--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       <section class="resume-section" id="about">
         <div class="resume-section-content">
           <h1 class="mb-0">
-            KIM
-            <span class="text-primary">SEONG-RYUNG</span>
+            SEONG-RYUNG
+            <span class="text-primary">KIM</span>
           </h1>
           <div class="subheading mb-5">
             3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
