--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </p>
           <div class="social-icons">
             <a class="social-icon" href="#!"
-              ><i class="fa-thin fa-paper-plane"></i
+              ><i class="fa-solid fa-heart"></i
             ></a>
             <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
             <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
